<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_Events" Id="{32f6024c-0dad-423a-93c2-4048132a2b02}">
    <Declaration><![CDATA[TYPE ST_Events :
STRUCT
	bImmediateFault				:BOOL;
	bCycleStopFault				:BOOL;
	bCycleStopRequest			:BOOL;

	bEventTextsSet				:BOOL; //True after event texts are set 
	aEventFlags					:ARRAY[0..127] OF BOOL;
	aEventTimers				:ARRAY[0..127] OF TON;
	aEventTexts					:ARRAY[0..127] OF T_MaxString;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>